border animation shadow complete. Fix gap next

--- a/style.css
+++ b/style.css
@@ -79,9 +79,9 @@ section{
 
 } */
 
-.item3{
-  /* tech */
-}
+/* .item3{
+  tech
+} */
 
 .item4{
   border-top-right-radius: 30%;
